# DesignIQ

./: .gitattributes  .gitignore  Dockerfile  README.md  error.txt  generate_tasks.py  inference.py  openenv.yaml  overhaul_tasks.py  push_error.txt  push_out.txt  pyproject.toml
backend/: __init__.py  main.py  openenv_models.py  requirements.txt
frontend/src/: App.jsx
frontend/src/pages/: About.jsx  Dashboard.jsx  Home.jsx
graders/: design_grader.py  grader_1.py  grader_2.py  grader_3.py
server/: app.py
tasks/: design_task.py  grader_1.py  grader_10.py  grader_11.py  grader_12.py  grader_13.py  grader_14.py  grader_15.py  grader_2.py  grader_3.py  grader_4.py  grader_5.py  grader_6.py  grader_7.py  grader_8.py  grader_9.py  task_1.py  task_10.py  task_11.py  task_12.py  task_13.py  task_14.py  task_15.py  task_1_thickness.py  task_2.py  task_2_molding.py  task_3.py  task_3_aerospace.py  task_4.py  task_4_cnc_precision.py  task_5.py  task_5_additive_validation.py  task_6.py  task_7.py  task_8.py  task_9.py
