[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "designiq"
version = "0.1.0"
description = "AI-Driven Design Validation Environment"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "openenv-core>=0.2.0",
    "fastapi",
    "uvicorn[standard]",
    "huggingface_hub",
    "pydantic",
    "requests",
    "openai"
]

[project.scripts]
server = "server.app:app"
start = "inference:main"